--- a/backend/package.json
+++ b/backend/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start":"nodemon backend/server.js",
-    "build": "npm install  && npm install  --prefix frontend && npm run build --prefix frontend"
+    "start":"nodemon backend/server.js"
   },
   "author": "Subhrajit Barman",
   "license": "ISC",
